fixed horizontal scroll

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -259,6 +259,15 @@
    flex-direction: column;
    @include adaptiveValue('gap',34,20);
    align-items: center;
+   opacity: 0;
+   transition: opacity 0.6s ease;
+
+   &.animate {
+      opacity: 1;
+   }
+
+
+
    // .block-header__title
    &__title {
       @include adaptiveValue('font-size',50,30);
